--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,14 @@
             <div class="card-body">
                 <h3 class="card-title">Todos App</h3>
                 <h6 class="card-subtitle mb-2 text-muted">Using Angular & Redux</h6>
-                <app-todo-overview></app-todo-overview>
-                <app-todo-list></app-todo-list>
+                <div class="row">
+                    <div class="col-md-12">
+                        <app-todo-overview></app-todo-overview>
+                    </div>
+                    <div class="col-md-12">
+                        <app-todo-list></app-todo-list>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
