--- a/src/app/pages/todo-overview/todo-overview.component.html
+++ b/src/app/pages/todo-overview/todo-overview.component.html
@@ -1,8 +1,7 @@
-<hr/>
 <div class="row mb-3">
     <div class="col-md-10">
-        <mat-icon class="text-success">thumb_up</mat-icon>{{complete}}&nbsp;
-        <mat-icon class="text-danger">thumb_down</mat-icon>{{unComplete}}
+        <mat-icon class="text-primary">thumb_up</mat-icon>{{complete}}&nbsp;
+        <mat-icon class="text-primary">thumb_down</mat-icon>{{unComplete}}
     </div>
     <div class="col-md-2">
         <p class="col-md-12"><span class="badge badge-secondary">Last Update: <div> {{lastUpdate|date:"MM/dd/yyyy HH:mm:ss"}} </div> </span></p>
