--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,22 @@
 <div class="container" id="app">
-    <div>
-        <div class="card">
-            <div class="card-body">
-                <h3 class="card-title">Todos App</h3>
-                <h6 class="card-subtitle mb-2 text-muted">Using Angular & Redux</h6>
-                <div class="row">
-                    <div class="col-md-12">
-                        <app-todo-overview></app-todo-overview>
-                    </div>
-                    <div class="col-md-12">
-                        <app-todo-list></app-todo-list>
-                    </div>
+    <div class="card">
+        <div class="card-body">
+            <h3 class="card-title">
+                <mat-toolbar color="primary">
+                    <mat-toolbar-row>
+                        <span>Todo List With Angular & NGRX</span>
+                        <span class="example-spacer"></span>
+                        <button [ngStyle]="{display: mashDeletStatus?'block':'none'}" mat-icon-button (click)="updateDeleteStatus()"><mat-icon class="example-icon" aria-hidden="false" aria-label="Example user verified icon">delete_sweep</mat-icon></button>
+                    </mat-toolbar-row>
+                </mat-toolbar>
+            </h3>
+
+            <div class="row">
+                <div class="col-md-12">
+                    <app-todo-overview></app-todo-overview>
+                </div>
+                <div class="col-md-12">
+                    <app-todo-list></app-todo-list>
                 </div>
             </div>
         </div>
