--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
     <div class="card">
         <div class="card-body">
             <h3 class="card-title">
-                <mat-toolbar color="primary">
+                <mat-toolbar [color]="themeColor">
                     <mat-toolbar-row>
                         <span>Todo List With Angular & NGRX</span>
                         <span class="example-spacer"></span>
